@@ -212,13 +212,13 @@ class HabitServiceImplTest {
 
     private static Stream<Arguments> getAllByDifferentParametersArguments() {
         return Stream.of(
-            arguments(Optional.of(Collections.singletonList("HABIT")), Optional.of(true), Optional.of(1)),
-            arguments(Optional.empty(), Optional.of(true), Optional.of(1)),
-            arguments(Optional.of(Collections.singletonList("HABIT")), Optional.empty(), Optional.of(1)),
+            arguments(Optional.of(Collections.singletonList("HABIT")), Optional.of(true), Optional.of(List.of(1))),
+            arguments(Optional.empty(), Optional.of(true), Optional.of(List.of(1))),
+            arguments(Optional.of(Collections.singletonList("HABIT")), Optional.empty(), Optional.of(List.of(1))),
             arguments(Optional.of(Collections.singletonList("HABIT")), Optional.of(true), Optional.empty()),
             arguments(Optional.of(Collections.singletonList("HABIT")), Optional.empty(),
                 Optional.empty()),
-            arguments(Optional.empty(), Optional.empty(), Optional.of(1)),
+            arguments(Optional.empty(), Optional.empty(), Optional.of(List.of(1))),
             arguments(Optional.empty(), Optional.of(true), Optional.empty()));
     }
 
@@ -226,7 +226,7 @@ class HabitServiceImplTest {
     @MethodSource("getAllByDifferentParametersArguments")
     void getAllByDifferentParameters(Optional<List<String>> tags,
         Optional<Boolean> isCustomHabit,
-        Optional<Integer> complexity) {
+        Optional<List<Integer>> complexities) {
         Pageable pageable = PageRequest.of(0, 2);
         String tag = "HABIT";
 
@@ -243,63 +243,65 @@ class HabitServiceImplTest {
         when(habitAssignRepo.findAmountOfUsersAcquired(anyLong())).thenReturn(5L);
         when(habitRepo.findById(1L)).thenReturn(Optional.ofNullable(ModelUtils.getHabitWithCustom()));
 
-        if (isCustomHabit.isPresent() && tags.isPresent() && complexity.isPresent()) {
+        if (isCustomHabit.isPresent() && tags.isPresent() && complexities.isPresent()) {
             when(habitTranslationRepo.findAllByDifferentParameters(pageable, lowerCaseTags,
-                isCustomHabit, complexity, "en")).thenReturn(habitTranslationPage);
-        } else if (complexity.isPresent() && isCustomHabit.isPresent()) {
+                isCustomHabit, complexities, "en")).thenReturn(habitTranslationPage);
+        } else if (complexities.isPresent() && isCustomHabit.isPresent()) {
             when(habitTranslationRepo.findAllByIsCustomHabitAndComplexityAndLanguageCode(pageable,
-                isCustomHabit, complexity, "en")).thenReturn(habitTranslationPage);
-        } else if (complexity.isPresent() && tags.isPresent()) {
+                isCustomHabit, complexities, "en")).thenReturn(habitTranslationPage);
+        } else if (complexities.isPresent() && tags.isPresent()) {
             when(habitTranslationRepo.findAllByTagsAndComplexityAndLanguageCode(pageable, lowerCaseTags,
-                complexity, "en")).thenReturn(habitTranslationPage);
+                complexities, "en")).thenReturn(habitTranslationPage);
         } else if (isCustomHabit.isPresent() && tags.isPresent()) {
             when(habitTranslationRepo.findAllByTagsAndIsCustomHabitAndLanguageCode(pageable,
                 lowerCaseTags, isCustomHabit, "en")).thenReturn(habitTranslationPage);
         } else if (tags.isPresent()) {
             when(habitTranslationRepo.findAllByTagsAndLanguageCode(pageable,
                 lowerCaseTags, "en")).thenReturn(habitTranslationPage);
-        } else if (complexity.isPresent()) {
+        } else if (complexities.isPresent()) {
             when(habitTranslationRepo.findAllByComplexityAndLanguageCode(pageable,
-                complexity, "en")).thenReturn(habitTranslationPage);
+                complexities, "en")).thenReturn(habitTranslationPage);
         } else if (isCustomHabit.isPresent()) {
             when(habitTranslationRepo.findAllByIsCustomHabitAndLanguageCode(pageable,
                 isCustomHabit, "en")).thenReturn(habitTranslationPage);
         } else {
             assertFalse(
-                (tags.isPresent() && !tags.get().isEmpty()) || isCustomHabit.isPresent() || complexity.isPresent());
+                (tags.isPresent() && !tags.get().isEmpty()) || isCustomHabit.isPresent()
+                    || (complexities.isPresent() && !complexities.get().isEmpty()));
         }
 
         assertEquals(pageableDto, habitService.getAllByDifferentParameters(pageable,
-            tags, isCustomHabit, complexity, "en"));
+            tags, isCustomHabit, complexities, "en"));
 
         verify(modelMapper).map(habitTranslation, HabitDto.class);
         verify(habitAssignRepo).findAmountOfUsersAcquired(anyLong());
         verify(habitRepo).findById(1L);
 
-        if (isCustomHabit.isPresent() && tags.isPresent() && complexity.isPresent()) {
+        if (isCustomHabit.isPresent() && tags.isPresent() && complexities.isPresent()) {
             verify(habitTranslationRepo).findAllByDifferentParameters(pageable, lowerCaseTags,
-                isCustomHabit, complexity, "en");
-        } else if (complexity.isPresent() && isCustomHabit.isPresent()) {
+                isCustomHabit, complexities, "en");
+        } else if (complexities.isPresent() && isCustomHabit.isPresent()) {
             verify(habitTranslationRepo).findAllByIsCustomHabitAndComplexityAndLanguageCode(pageable,
-                isCustomHabit, complexity, "en");
-        } else if (complexity.isPresent() && tags.isPresent()) {
+                isCustomHabit, complexities, "en");
+        } else if (complexities.isPresent() && tags.isPresent()) {
             verify(habitTranslationRepo).findAllByTagsAndComplexityAndLanguageCode(pageable, lowerCaseTags,
-                complexity, "en");
+                complexities, "en");
         } else if (isCustomHabit.isPresent() && tags.isPresent()) {
             verify(habitTranslationRepo).findAllByTagsAndIsCustomHabitAndLanguageCode(pageable,
                 lowerCaseTags, isCustomHabit, "en");
         } else if (tags.isPresent()) {
             verify(habitTranslationRepo).findAllByTagsAndLanguageCode(pageable,
                 lowerCaseTags, "en");
-        } else if (complexity.isPresent()) {
+        } else if (complexities.isPresent()) {
             verify(habitTranslationRepo).findAllByComplexityAndLanguageCode(pageable,
-                complexity, "en");
+                complexities, "en");
         } else if (isCustomHabit.isPresent()) {
             verify(habitTranslationRepo).findAllByIsCustomHabitAndLanguageCode(pageable,
                 isCustomHabit, "en");
         } else {
             assertFalse(
-                (tags.isPresent() && !tags.get().isEmpty()) || isCustomHabit.isPresent() || complexity.isPresent());
+                (tags.isPresent() && !tags.get().isEmpty()) || isCustomHabit.isPresent()
+                    || (complexities.isPresent() && !complexities.get().isEmpty()));
         }
     }
 
